# simplest_ffmpeg_streamer

./: CMakeLists.txt  README.md  build.sh
src/receiver/: simplest_ffmpeg_receiver.cpp
src/streamer/: simplest_ffmpeg_streamer.cpp
